--- a/杂感/食堂阿姨.md
+++ b/杂感/食堂阿姨.md
@@ -1,5 +1,15 @@
-    今天下午四点钟去东区食堂吃晚饭，因为群里说五点钟开组会。在我快吃完的时候，一个阿姨从我面前走过，还停了一会儿，清了一下嗓子，我就感觉有点不对劲，连忙低下头吃饭，避免对视的尴尬。
+    今天下午四点钟去东区食堂吃晚饭，因为群里说五点钟开组会。在我快吃完的时候，
+    
+    一个阿姨从我面前走过，还停了一会儿，清了一下嗓子，我就感觉有点不对劲，连忙低下头吃饭，避免对视的尴尬。
 
-    阿姨走到我旁边跟我说，“同学，好久没见到你。” 我确实没有想起来，笑着“嗯嗯”，阿姨接着说“你考完试了吗”，我说“考试，我没有考试”。她说“哦哦，你是考研究生吧，从认识你已经三年了，我之前在二楼你记得吧”。她把口罩拉下来。我想可能是之前早餐打粥的阿姨，我之前经常早上到东区点一个馒头、鸡蛋和白粥。她说她之前还到过水秀工作，现在只有她一个人在东区，其他人都回去了。
+    阿姨走到我旁边跟我说，“同学，好久没见到你。” 我确实没有想起来，笑着“嗯嗯”，阿姨接着说“你考完试了吗”，
+    
+    我说“考试，我没有考试”。她说“哦哦，你是考研究生吧，从认识你已经三年了，我之前在二楼你记得吧”。她把口罩拉下来。
+    
+    我想可能是之前早餐打粥的阿姨，我之前经常早上到东区点一个馒头、鸡蛋和白粥。她说她之前还到过水秀工作，现在只有她一个人在东区，其他人都回去了。
 
-    我有点感动的同时，也觉得疑惑，我有那么让人印象深刻吗，食堂阿姨、修车师傅、任课老师都能记住我。然鹅我只想做一个不被人引起注意的小白，每天安安静静的做好自己就好了，不要有那么多不是工作、学习上的应酬。不过社会终究是社会，总是不大可能实现的。
+    我有点感动的同时，也觉得疑惑，我有那么让人印象深刻吗，食堂阿姨、修车师傅、任课老师都能记住我。
+    
+    然鹅我只想做一个不被人引起注意的小白，每天安安静静的做好自己就好了，不要有那么多不是工作、学习上的应酬。
+    
+    不过社会终究是社会，总是不大可能实现的。
