--- a/书单/中國傳統學問必讀書目.md
+++ b/书单/中國傳統學問必讀書目.md
@@ -1,4 +1,6 @@
 自己在讀書過程中逐漸形成的必讀書目。以爲後來參考。
+# 小學
+- 說文解字
 # 經部
 ## 第一部分
 - 詩經
@@ -16,6 +18,8 @@
 - 春秋左傳
 - 春秋公羊傳
 - 春秋榖梁傳
+## 第五部分
+- 爾雅
 # 史部
 - 史記
 - 漢書
@@ -25,12 +29,17 @@
 # 文集
 - 韓愈
 - 莊子
+- 楚辭
+- 荀子
+- 文選
 # 詩集
 - 杜甫
 - 李白
 - 韓愈
+- 文選
 # 詞集
-辛棄疾
+- 辛棄疾
+- 蘇軾
 
 古來聖賢豪傑，其實所讀之書並不多，只是精熟讀透幾部書而已，其他則是泛覽博觀，以長見識。吾亦有志於古人之學，只是處此時代，不知能做到幾分。
 勉之哉，勉之哉！
