--- a/丫头相关/分手.md
+++ b/丫头相关/分手.md
@@ -12,3 +12,5 @@
     今虽名为恋人，此事之后，吾心不可谓无芥蒂矣。他日相见，亦不能坦诚以待矣。
 
     故书此一通，明吾任姑娘之去就也，自此以后，吾二人绝无恋人关系，姑娘不必忧贫矣，吾亦从此脱然洒然不复深自责矣。岂不两美哉。
+    
+    李药师白。大周二年六月十二。
