--- a/丫头相关/分手.md
+++ b/丫头相关/分手.md
@@ -9,7 +9,7 @@
     姑娘亦见吾心有以易乎？无以易也？然姑娘之心已易矣，昭昭明白无复可疑矣，吾虽能自欺，姑娘何能自欺也？能自欺一时，能欺一世乎？吾不忍见后夫妻离心也。
     
     吾读圣贤之书久矣，诗风天下自关雎始，吾亦欲得贤妇也，亦欲得共患难者也。所谓夫妻本是同林鸟大难临头各自飞者，盖五胡乱华以来，蛮夷之俗污染中原，
-    后世风俗败坏之辞也，今人执之以为不刊之典，亦可笑也。二年以来，姑娘不知我如此之深也，语曰：有倾盖如故，有白头如新。吾于姑娘乃白头如新乎，痛哉。
+    后世风气败坏之辞也，今人执之以为不刊之典，亦可笑也。二年以来，姑娘不知我如此之深也，语曰：有倾盖如故，有白头如新。吾于姑娘乃白头如新乎，痛哉。
     今虽名为恋人，此事之后，吾心不可谓无芥蒂矣。他日相见，亦不能坦诚以待矣。
 
     故书此一通，明吾任姑娘之去就也，自此以后，吾二人绝无恋人关系，姑娘不必忧贫矣，吾亦从此脱然洒然不复深自责矣。岂不两美哉。
